# pac_man

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
src/: main.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: app_commands.rs  mod.rs
src-tauri/src/config/: map.json
src-tauri/src/configs/map/: map.json
src-tauri/src/models/: cell.rs  entity.rs  mod.rs
src/app/: App.vue  Router.ts  bootstrap.scss
src/app/models/: Cell.ts
src/components/: CustomBar.vue  Loading.vue  MainNavigation.vue  Map.vue
src/pages/: Error.vue  Home.vue  MapEdit.vue  PacMan.vue
